# mailtrim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  THREAT_MODEL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  publish.yml  release.yml  stale.yml
mailtrim/: __init__.py  config.py
mailtrim/cli/: main.py
mailtrim/core/: ai_engine.py  diagnostics.py  errors.py  follow_up.py  gmail_client.py  llm.py  mock_ai.py  sender_stats.py  storage.py  unsubscribe.py  usage_stats.py  validation.py
mailtrim/core/ai/: client.py  mode.py
mailtrim/core/providers/: base.py  factory.py  gmail.py  imap.py
tests/: conftest.py  test_ai_trust_boundary.py  test_diagnostics.py  test_imap_quickstart.py  test_imap_undo.py  test_mock_ai.py  test_privacy.py  test_provider_resolution.py  test_purge.py  test_quickstart.py  test_setup.py  test_since_filter.py  test_smarter_confidence.py  test_ssrf_protection.py  test_stats_share.py  test_storage.py  test_validation.py  test_version.py
