[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailtrim"
version = "0.1.0"
description = "Privacy-first Gmail inbox management — local-first core, optional AI via Anthropic API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mailtrim contributors" }]
keywords = [
    "gmail", "email", "inbox", "cleanup", "productivity",
    "cli", "ai", "anthropic", "privacy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
dependencies = [
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.120.0",
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/sadhgurutech/mailtrim"
"Bug Tracker" = "https://github.com/sadhgurutech/mailtrim/issues"
"Source Code" = "https://github.com/sadhgurutech/mailtrim"

[project.optional-dependencies]
# Headless browser support for unsubscribe fallback
headless = ["playwright>=1.44.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
mailtrim = "mailtrim.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mailtrim*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mailtrim"]
omit = ["*/venv/*", "tests/*"]
